--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@
         <div class="row pt-5">
             <div class="col-lg-4 col-md-12 mb-5">
                 <h1 class="mb-3 display-5 text-capitalize text-white"><span class="text-primary">Mahant</span> Interior</h1>
+                    <h5 class="text-primary mb-4">Kiran Patel (Owner)</h5>
                 <p class="m-0">Mahant Interior is a professional furniture and interior solutions shop offering a complete range of services, including UPVC and wooden furniture, POP work, colour and painting work, and full home/office décor services.</p>
             </div>
             <div class="col-lg-8 col-md-12">
