--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <h4 class="text-primary m-0">Convert Dream Into Reality</h4>
                         <h4 class="display-4 m-0 mt-2 mt-md-3 text-white">Best Interior Design Service</h4>
-                        <a href="" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">Learn More</a>
+                        <a href="https://www.instagram.com/mahant_interior_zundal?igsh=aG8xeWd3NDUwYzRp" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">visit instagram</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -211,7 +211,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <h4 class="text-primary m-0">Convert Dream Into Reality</h4>
                         <h4 class="display-4 m-0 mt-2 mt-md-3 text-white">Highly Experienced</h4>
-                        <a href="" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">Learn More</a>
+                        <a href="https://www.instagram.com/mahant_interior_zundal?igsh=aG8xeWd3NDUwYzRp" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">visit instagram</a>
                     </div>
                 </div>
             </div>
