--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
                         <h4 class="text-primary m-0">Convert Dream Into Reality</h4>
                         <h4 class="display-4 m-0 mt-2 mt-md-3 text-white">Best Interior Design Service</h4>
                         <a href="https://www.instagram.com/mahant_interior_zundal?igsh=aG8xeWd3NDUwYzRp" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">visit instagram</a>
+                          <a href="https://maps.app.goo.gl/1WsDax6Ra97r3AUA7" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">Get Location</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -212,6 +213,7 @@
                         <h4 class="text-primary m-0">Convert Dream Into Reality</h4>
                         <h4 class="display-4 m-0 mt-2 mt-md-3 text-white">Highly Experienced</h4>
                         <a href="https://www.instagram.com/mahant_interior_zundal?igsh=aG8xeWd3NDUwYzRp" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">visit instagram</a>
+                        <a href="https://maps.app.goo.gl/1WsDax6Ra97r3AUA7" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">Get Location</a>
                     </div>
                 </div>
             </div>
