--- a/index.html
+++ b/index.html
@@ -191,7 +191,9 @@
                     <a href="service.html" class="nav-item nav-link text-dark">Services</a>
                     <a href="contact.html" class="nav-item nav-link text-dark">Contact</a>
                 </div>
-                <a href="contact.html" class="btn btn-primary d-none d-lg-block">Get a Quote <i class="fa fa-arrow-right ml-2"></i></a>
+<a href="uploads/myfile.pdf" download class="btn btn-primary d-none d-lg-block">
+    Download Brochure <i class="fa fa-arrow-right ml-2"></i>
+</a>
             </div>
         </nav>
     </div>
@@ -203,7 +205,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <h4 class="text-primary m-0">Convert Dream Into Reality</h4>
                         <h4 class="display-4 m-0 mt-2 mt-md-3 text-white">Best Interior Design Service</h4>
-                        <a href="https://www.instagram.com/mahant_interior_zundal?igsh=aG8xeWd3NDUwYzRp" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">visit instagram</a>
+                        <a href="https://www.instagram.com/mahant_interior_zundal?igsh=aG8xeWd3NDUwYzRp" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">Visit Instagram</a>
                           <a href="https://maps.app.goo.gl/1WsDax6Ra97r3AUA7" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">Get Location</a>
                     </div>
                 </div>
@@ -212,7 +214,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <h4 class="text-primary m-0">Convert Dream Into Reality</h4>
                         <h4 class="display-4 m-0 mt-2 mt-md-3 text-white">Highly Experienced</h4>
-                        <a href="https://www.instagram.com/mahant_interior_zundal?igsh=aG8xeWd3NDUwYzRp" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">visit instagram</a>
+                        <a href="https://www.instagram.com/mahant_interior_zundal?igsh=aG8xeWd3NDUwYzRp" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">Visit Instagram</a>
                         <a href="https://maps.app.goo.gl/1WsDax6Ra97r3AUA7" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">Get Location</a>
                     </div>
                 </div>
